Bug 292392 - Crash on start [@ UmsCollection::trackForUrl]
Summary: Crash on start [@ UmsCollection::trackForUrl]
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/USB mass storage and MSC (other bugs)
Version First Reported In: 2.5-git
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-25 12:54 UTC by Myriam Schweingruber
Modified: 2012-01-25 15:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Myriam Schweingruber 2012-01-25 12:54:55 UTC
Application: amarok (2.5-GIT)
KDE Platform Version: 4.7.97 (4.8 RC2 (4.7.97)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-15-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
starting Amarok, the crash happens as soon as it tries to read the playlist apparantly

-- Backtrace:
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f659ecc37a0 (LWP 15884))]

Thread 5 (Thread 0x7f654c602700 (LWP 15915)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f65812abd54 in LoopRequest (p_playlist=0x1e0ac50) at playlist/thread.c:539
#2  Thread (data=0x1e0ac50) at playlist/thread.c:586
#3  0x00007f65982aeefc in start_thread (arg=0x7f654c602700) at pthread_create.c:304
#4  0x00007f659baac89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f6546972700 (LWP 15918)):
#0  0x00007f65982b1034 in __pthread_mutex_lock (mutex=0x1fa72d8) at pthread_mutex_lock.c:61
#1  0x00007f6595c23839 in g_main_context_release () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6595c24f9a in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6595c25429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f659c41ef3e in QEventDispatcherGlib::processEvents (this=0x1e17bf0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f659c3f2cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f659c3f2ef7 in QEventLoop::exec (this=0x7f6546971db0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f659c30a27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007f659c3d5cbf in QInotifyFileSystemWatcherEngine::run (this=0x1f8efe0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f659c30cd05 in QThreadPrivate::start (arg=0x1f8efe0) at thread/qthread_unix.cpp:331
#10 0x00007f65982aeefc in start_thread (arg=0x7f6546972700) at pthread_create.c:304
#11 0x00007f659baac89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f6544a90700 (LWP 15923)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f659c30d1ab in wait (time=18446744073709551615, this=0x24258f0) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x19fc970, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f659983d864 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x19ad490, th=0x19ea070) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f659983fe0b in ThreadWeaver::WorkingHardState::applyForWork (this=0x1a07560, th=0x19ea070) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f659983eccf in ThreadWeaver::ThreadRunHelper::run (this=0x7f6544a8fe00, parent=0x19ad490, th=0x19ea070) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007f659983ed5b in ThreadWeaver::Thread::run (this=0x19ea070) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007f659c30cd05 in QThreadPrivate::start (arg=0x19ea070) at thread/qthread_unix.cpp:331
#8  0x00007f65982aeefc in start_thread (arg=0x7f6544a90700) at pthread_create.c:304
#9  0x00007f659baac89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f653ffff700 (LWP 15925)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f659c30d1ab in wait (time=18446744073709551615, this=0x24258f0) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x19fc970, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f659983d864 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x19ad490, th=0x19d5aa0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f659983fe0b in ThreadWeaver::WorkingHardState::applyForWork (this=0x1a07560, th=0x19d5aa0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f659983eccf in ThreadWeaver::ThreadRunHelper::run (this=0x7f653fffee00, parent=0x19ad490, th=0x19d5aa0) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007f659983ed5b in ThreadWeaver::Thread::run (this=0x19d5aa0) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007f659c30cd05 in QThreadPrivate::start (arg=0x19d5aa0) at thread/qthread_unix.cpp:331
#8  0x00007f65982aeefc in start_thread (arg=0x7f653ffff700) at pthread_create.c:304
#9  0x00007f659baac89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f659ecc37a0 (LWP 15884)):
[KCrash Handler]
#6  0x00007f654698c8d8 in QMap<QString, KSharedPtr<Meta::Track> >::value (this=0x8, akey=..., adefaultValue=...) at /usr/include/qt4/QtCore/qmap.h:510
#7  0x00007f6546985701 in UmsCollection::trackForUrl (this=0x7f6540026fa0, url=...) at /home/myriam/kde/src/amarok/src/core-impl/collections/umscollection/UmsCollection.cpp:318
#8  0x00007f659e05d59c in CollectionManager::trackForUrl (this=0x182a4b0, url=...) at /home/myriam/kde/src/amarok/src/core-impl/collections/support/CollectionManager.cpp:460
#9  0x00007f659dfe1625 in Playlists::XSPFPlaylist::triggerTrackLoad (this=0x7f6540053850) at /home/myriam/kde/src/amarok/src/core-impl/playlists/types/file/xspf/XSPFPlaylist.cpp:256
#10 0x00007f659de4dd12 in Playlist::Actions::restoreDefaultPlaylist (this=0x7f654004fcd0) at /home/myriam/kde/src/amarok/src/playlist/PlaylistActions.cpp:483
#11 0x00007f659de4c706 in Playlist::Actions::init (this=0x7f654004fcd0) at /home/myriam/kde/src/amarok/src/playlist/PlaylistActions.cpp:95
#12 0x00007f659de4c4e5 in Playlist::Actions::instance () at /home/myriam/kde/src/amarok/src/playlist/PlaylistActions.cpp:59
#13 0x00007f659de4e441 in The::playlistActions () at /home/myriam/kde/src/amarok/src/playlist/PlaylistActions.cpp:535
#14 0x00007f659e1ae184 in MainWindow::createActions (this=0x1829240) at /home/myriam/kde/src/amarok/src/MainWindow.cpp:697
#15 0x00007f659e1a9eae in MainWindow::MainWindow (this=0x1829240) at /home/myriam/kde/src/amarok/src/MainWindow.cpp:145
#16 0x00007f659e190365 in App::continueInit (this=0x7fff91930390) at /home/myriam/kde/src/amarok/src/App.cpp:545
#17 0x00007f659e18d8c2 in App::App (this=0x7fff91930390) at /home/myriam/kde/src/amarok/src/App.cpp:185
#18 0x000000000040c7c4 in main (argc=3, argv=0x7fff91932808) at /home/myriam/kde/src/amarok/src/main.cpp:301

Reported using DrKonqi
Comment 1 Bart Cerneels 2012-01-25 13:29:33 UTC
Git commit d15e0c1e19e3f569e770e3e71ab9934bfa4d61e6 by Bart Cerneels.
Committed on 25/01/2012 at 13:54.
Pushed by shanachie into branch 'master'.

Prevent crash when uninitialized.
FIXED_In:2.6

M  +9    -1    src/core-impl/collections/umscollection/UmsCollection.cpp

http://commits.kde.org/amarok/d15e0c1e19e3f569e770e3e71ab9934bfa4d61e6