Prevent crash when uninitialized.

BUG:292392
FIXED_In:2.6